# window_relative_system

./: .gitignore  Cargo.toml  README.md
profile_creation_macro/: Cargo.toml
profile_creation_macro/src/: lib.rs
src/: lib.rs  main.rs  profile.rs  profile_creation_macro.rs  profile_data.rs  profile_data_u.rs  profile_service.rs  profile_service_u.rs  profile_u.rs  system.rs  system_u.rs  window_hook.rs  window_hook_u.rs
src/window_relative_profile/: default_profile.rs  mod.rs  profile.rs  profile_creation_macro.rs  properties.rs
src/window_relative_profile/services/: mod.rs  server_controller.rs  server_controller_u.rs
window_relative_profile_creator_macro/: Cargo.toml
window_relative_profile_creator_macro/src/: lib.rs
