[package]
name="window_relative_system"
version="0.4.1"
edition="2024"

[dependencies]
window_controller={ version="0.1.1", git="https://github.com/SuccessfullyFailed/window_controller" }
task_syncer={ version="0.1.4", git="https://github.com/SuccessfullyFailed/task_syncer" }
winapi={ version="0.3", features=["winuser"] }