[package]
name="window_relative_system"
version="2.0.0"
edition="2024"

[dependencies]
window_controller={ version="0.1.1", git="https://github.com/SuccessfullyFailed/window_controller" }
task_syncer={ version="0.1.5", git="https://github.com/SuccessfullyFailed/task_syncer" }
circular_buffer={ git="https://github.com/SuccessfullyFailed/circular_buffer" }
winapi={ version="0.3", features=["winuser"] }